new paypal link

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>La Ruta del Dólar — Ushuaia → Alaska</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles/styles.css" />
   <!-- Mapbox GL JS (v3 estable, CDN unpkg) -->
   <link href="https://unpkg.com/mapbox-gl@3.1.2/dist/mapbox-gl.css" rel="stylesheet" />
-
- 
-
 </head>
+
 <body>
   <!-- NAV LIGERA -->
   <header class="nav">
