--- a/donar.html
+++ b/donar.html
@@ -4,267 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Donar – La Ruta del Dólar</title>
-  
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+  <link rel="stylesheet" href="styles/styles_donar.css" />
 
-    body {
-      background: #f0f4f8;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      min-height: 100vh;
-      padding: 40px 20px;
-    }
-
-    .donar-container {
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    h1 {
-      text-align: center;
-      margin-bottom: 20px;
-      font-size: 3rem;
-      color: #023047;
-      text-shadow: none;
-      font-weight: 800;
-    }
-
-    .intro-text {
-      text-align: center;
-      max-width: 750px;
-      margin: 0 auto 50px;
-      color: #495057;
-      font-size: 1.2rem;
-      line-height: 1.8;
-      text-shadow: none;
-      font-weight: 400;
-    }
-
-    .cards {
-      display: grid;
-      gap: 30px;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      margin-bottom: 40px;
-    }
-
-    .card {
-      background: white;
-      padding: 35px 30px;
-      border-radius: 20px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .card::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 6px;
-      background: linear-gradient(90deg, #FFB703, #FB8500);
-    }
-
-    .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 15px 50px rgba(0, 0, 0, 0.3);
-    }
-
-    .card h2 {
-      margin-bottom: 16px;
-      color: #023047;
-      font-size: 1.6rem;
-      font-weight: 700;
-    }
-
-    .card p {
-      color: #495057;
-      font-size: 1.05rem;
-      line-height: 1.6;
-      margin-bottom: 20px;
-      min-height: 50px;
-    }
-
-    .btn {
-      padding: 14px 28px;
-      margin-top: 10px;
-      background: linear-gradient(135deg, #FFB703, #FB8500);
-      border-radius: 12px;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 1.1rem;
-      font-weight: 700;
-      width: 100%;
-      transition: all 0.3s ease;
-      text-transform: uppercase;
-      letter-spacing: 0.5px;
-      box-shadow: 0 4px 15px rgba(251, 133, 0, 0.4);
-    }
-
-    .btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 20px rgba(251, 133, 0, 0.6);
-      background: linear-gradient(135deg, #FFC933, #FB8500);
-    }
-
-    .btn:active {
-      transform: translateY(0);
-    }
-
-    .wallet-box {
-      background: #f8f9fa;
-      padding: 18px;
-      border-radius: 10px;
-      font-family: 'Courier New', monospace;
-      margin-top: 15px;
-      font-size: 0.95rem;
-      word-break: break-all;
-      color: #023047;
-      border: 2px solid #e9ecef;
-      font-weight: 600;
-      line-height: 1.6;
-    }
-
-    a.btn {
-      display: block;
-      text-decoration: none;
-      text-align: center;
-    }
-
-    .extra-block {
-      margin-top: 50px;
-      padding: 40px 35px;
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .extra-block::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 6px;
-      background: linear-gradient(90deg, #06d6a0, #1b9aaa);
-    }
-
-    .extra-block h2 {
-      margin-bottom: 18px;
-      color: #023047;
-      font-size: 2rem;
-      font-weight: 700;
-    }
-
-    .extra-block p {
-      color: #495057;
-      font-size: 1.1rem;
-      line-height: 1.8;
-      margin-bottom: 25px;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .extra-block .btn {
-      background: linear-gradient(135deg, #06d6a0, #1b9aaa);
-      box-shadow: 0 4px 15px rgba(6, 214, 160, 0.4);
-      max-width: 400px;
-      margin: 0 auto;
-    }
-
-    .extra-block .btn:hover {
-      box-shadow: 0 6px 20px rgba(6, 214, 160, 0.6);
-      background: linear-gradient(135deg, #07e6b0, #1b9aaa);
-    }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      body {
-        padding: 20px 15px;
-      }
-
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 15px;
-      }
-
-      .intro-text {
-        font-size: 1rem;
-        margin-bottom: 30px;
-      }
-
-      .cards {
-        grid-template-columns: 1fr;
-        gap: 20px;
-      }
-
-      .card {
-        padding: 25px 20px;
-      }
-
-      .card h2 {
-        font-size: 1.3rem;
-      }
-
-      .card p {
-        font-size: 0.95rem;
-        min-height: auto;
-      }
-
-      .btn {
-        font-size: 1rem;
-        padding: 12px 20px;
-      }
-
-      .wallet-box {
-        font-size: 0.85rem;
-        padding: 15px;
-      }
-
-      .extra-block {
-        padding: 30px 20px;
-        margin-top: 30px;
-      }
-
-      .extra-block h2 {
-        font-size: 1.5rem;
-      }
-
-      .extra-block p {
-        font-size: 1rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.6rem;
-      }
-
-      .intro-text {
-        font-size: 0.95rem;
-      }
-
-      .card h2 {
-        font-size: 1.2rem;
-      }
-
-      .wallet-box {
-        font-size: 0.75rem;
-      }
-    }
-  </style>
 </head>
 <body>
 
@@ -274,7 +15,7 @@
     <p class="intro-text">
       Cada kilómetro que donás se convierte en ruta real bajo las ruedas de la Calimba.  
       Con tu aporte nos ayudás a seguir avanzando y además quedás marcado en el mapa del viaje, 
-      acompañándonos en cada tramo de Ushuaia a Alaska.
+      acompañándonos en el ultimo tramo de Ushuaia a Alaska.
     </p>
 
     <div class="cards">
@@ -292,7 +33,7 @@
       <div class="card">
         <h2>🌎 Desde el Exterior</h2>
         <p>Ideal si estás fuera de Argentina. Rápido y seguro con PayPal.</p>
-        <a class="btn" href="https://www.paypal.com/qrcodes/p2pqrc/EX4XXW2346JRG" target="_blank">
+        <a class="btn" href="https://paypal.me/calimba" target="_blank">
           Donar con PayPal
         </a>
       </div>
@@ -309,7 +50,7 @@
 
     </div>
 
-    <!-- BLOQUE EXTRA MOTIVADOR -->
+    <!-- BLOQUE de CONTACTO -->
     <div class="extra-block">
       <h2>💚 Sumate a la aventura</h2>
       <p>
