--- a/donar.html
+++ b/donar.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Donar – La Ruta del Dólar</title>
-  <link rel="stylesheet" href="styles/styles_donar.css" />
+  <link rel="stylesheet" href="styles/styles.css" />
 
 </head>
 <body>
+
+  <!-- NAV LIGERA -->
+  <header class="nav">
+    <div class="container nav__inner">
+      <a href="index.html" class="brand" style="text-decoration: none; color: inherit;">🚐 La Ruta del Dólar</a>
+      <a href="index.html" class="btn btn--primary btn--sm">← Volver al home</a>
+    </div>
+  </header>
 
   <div class="donar-container">
     <h1>Elegí tu forma de donar</h1>
@@ -68,6 +76,18 @@
     </div>
 
   </div>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container footer__inner">
+      <p>© 2025 La Ruta del Dólar</p>
+      <nav class="footer__nav">
+        <a href="index.html#progreso">Progreso</a>
+        <a href="index.html#mapa">Mapa</a>
+        <a href="index.html#donar">Más info</a>
+      </nav>
+    </div>
+  </footer>
 
 </body>
 </html>
