changing relatve routes to githb pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>La Ruta del Dólar — Ushuaia → Alaska</title>
-  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="./styles/styles.css" />
   <!-- Mapbox GL JS (v3 estable, CDN unpkg) -->
   <link href="https://unpkg.com/mapbox-gl@3.1.2/dist/mapbox-gl.css" rel="stylesheet" />
 </head>
@@ -21,7 +21,7 @@
   <!-- HERO -->
   <section class="hero" style="background-image: url('https://res.cloudinary.com/giseares/image/upload/v1648061296/m59nkjgl4nq065i0s94qda7iql3k.jpg');">
     <video class="hero__video" autoplay muted loop playsinline poster="https://res.cloudinary.com/giseares/image/upload/v1648061296/m59nkjgl4nq065i0s94qda7iql3k.jpg">
-      <source src="images/Calimba.mp4" type="video/mp4">
+      <source src="./images/Calimba.mp4" type="video/mp4">
       Tu navegador no soporta video HTML5.
     </video>
 
@@ -134,8 +134,8 @@
   <!-- Mapbox GL JS (v3 estable, CDN unpkg) -->
   <script src="https://unpkg.com/mapbox-gl@3.1.2/dist/mapbox-gl.js"></script>
   <script src="https://unpkg.com/papaparse@5.4.1/papaparse.min.js"></script>
-  <script src="main.js" defer></script>
-  <script src="juego_ruta.js"></script>
+  <script src="./main.js" defer></script>
+  <script src="./juego_ruta.js"></script>
 
 
   <!-- Fallback mínimo por si main.js aún no está listo -->
