--- a/donar.html
+++ b/donar.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Donar – La Ruta del Dólar</title>
-  <link rel="stylesheet" href="styles/styles.css" />
+  <link rel="stylesheet" href="./styles/styles.css" />
 
 </head>
 <body>
@@ -12,8 +12,8 @@
   <!-- NAV LIGERA -->
   <header class="nav">
     <div class="container nav__inner">
-      <a href="index.html" class="brand" style="text-decoration: none; color: inherit;">🚐 La Ruta del Dólar</a>
-      <a href="index.html" class="btn btn--primary btn--sm">← Volver al home</a>
+      <a href="./index.html" class="brand" style="text-decoration: none; color: inherit;">🚐 La Ruta del Dólar</a>
+      <a href="./index.html" class="btn btn--primary btn--sm">← Volver al home</a>
     </div>
   </header>
 
